--- a/views/customer/customers_checkout.handlebars
+++ b/views/customer/customers_checkout.handlebars
@@ -306,7 +306,7 @@
                                                 return false;
                                             }
                                             return actions.order.create({
-                                                purchase_units: [{ "amount": { "currency_code": "SGD", "value":  } }]
+                                                purchase_units: [{ "amount": { "currency_code": "SGD", "value":{{sess.cartTotal}}  } }]
                                             });
                                         },
 
