--- a/views/tailor/vouchers.handlebars
+++ b/views/tailor/vouchers.handlebars
@@ -26,8 +26,8 @@
                                 <td class="product-discount">{{discount}}%</td>
                                 <td class="product-minpurchase">${{minpurchase}}</td>
                                 <td class="product-quantity">{{quantity}}</td>
-                                <td class="product-vstartdate">{{formatTime vstartdate 'DD MMM YYYY'}}</td>
-                                <td class="product-vexpirydate">{{formatTime vexpirydate 'DD MMM YYYY'}}</td>
+                                <td class="product-vstartdate">{{formatDate vstartdate 'DD MMM YYYY'}}</td>
+                                <td class="product-vexpirydate">{{formatDate vexpirydate 'DD MMM YYYY'}}</td>
                                 <td class="product-remove">
                                     <a href="updateVoucher/{{id}}"><i class="fa fa-pencil"></i></a>
                                     <form action="#" method="POST" style="display: inline-block;">
