--- a/views/tailor/updatevoucher.handlebars
+++ b/views/tailor/updatevoucher.handlebars
@@ -55,14 +55,14 @@
                                             <div class="billing-info mb-20">
                                                 <label for="vstartdate">Start Date<span style="color: red;">*</span></label>
                                                 <input id="datepicker" width="510" name="vstartdate"
-                                                    class="form-control" value="{{formatTime vouchers.vstartdate 'DD/MM/YYYY'}} "
+                                                    class="form-control" value="{{formatDate vouchers.vstartdate 'DD/MM/YYYY'}} "
                                                     required />
                                             </div>
                                             <br>
                                             <div class="billing-info mb-20">
                                                 <label for="vexpirydate">Expiry Date<span style="color: red;">*</span></label>
                                                 <input id="datepicker2" width="510" name="vexpirydate"
-                                                    class="form-control" value="{{formatTime vouchers.vexpirydate 'DD/MM/YYYY'}} "
+                                                    class="form-control" value="{{formatDate vouchers.vexpirydate 'DD/MM/YYYY'}} "
                                                     required />
                                             </div>
                                             <br>
