--- a/views/customer/customers_checkout.handlebars
+++ b/views/customer/customers_checkout.handlebars
@@ -39,6 +39,13 @@
                                         value="{{user_details.lastname}}{{lastNamee}}">
                                 </div>
                             </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="billing-info mb-20">
+                                    <label for="username">UserName</label>
+                                    <input type="text" name="userNamee" placeholder="User Name"
+                                        value="{{user_details.username}}{{username}}">
+                                </div>
+                            </div>
                             <div class="col-lg-12">
                                 <div class="billing-info mb-20">
                                     <label for="Address1">Address Line 1</label>
