--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -34,12 +34,22 @@
                                 </ul>
                             </li>
 
+                            <li><a href="/tailor/tailordeals">Deals  & Vouchers <i class="fa fa-angle-down"></i></i></a>
+                                <ul class="submenu">
+                                    <li><a href="/tailor/tailordeals">View My Deals</a></li>
+                                    <li><a href="/tailor/adddeal">Add Deals</a></li>
+                                    <li><a href="/tailor/vouchers">View My Vouchers</a></li>
+                                    <li><a href="/tailor/addvoucher">Add Vouchers</a></li>
+                                </ul>
+                            </li>
+
                              {{!-- <li><a href="/tailor/tailordeals">Deals <i class="fa fa-angle-down"></i></i></a>
                                 <ul class="submenu">
                                     
                                 </ul>
                             </li> --}}
                              <li><a href="/tailor/orders/{{user.id}}">Orders</a></li>
+                             
                              <li><a href="/tailor/viewcourse">Courses <i class="fa fa-angle-down"></i></i></a>
                                 <ul class="submenu">
                                     <li><a href="/tailor/createcourse">Create Courses</a></li>
