--- a/views/tailor/tailorschedule.handlebars
+++ b/views/tailor/tailorschedule.handlebars
@@ -66,7 +66,7 @@
                         <!-- Modal footer -->
                         <div class="modal-footer">
                         {{!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button> --}}
-                            <button type="submit" value="Submit" class="btn btn-success">Submit</button>
+                            <button type="submit" value="Submit" class="btn btn-success">Save</button>
                         </div>
 
                         </div>
