--- a/views/partials/_footer.handlebars
+++ b/views/partials/_footer.handlebars
@@ -18,9 +18,9 @@
                     </div>
                     <div class="footer-list">
                         <ul>
-                            <li><a href="about.html">Customer</a></li>
-                            <li><a href="#">Tailor</a></li>
-                            <li><a href="contact.html">Rider</a></li>
+                            <li><a href="/">Customer</a></li>
+                            <li><a href="/">Tailor</a></li>
+                            <li><a href="/">Rider</a></li>
                         </ul>
                     </div>
                 </div>
