--- a/views/user/sendNoti.handlebars
+++ b/views/user/sendNoti.handlebars
@@ -6,7 +6,7 @@
                 <label for="users_avail">Available Users</label>
                 <select name="users_avail" size="8" id="users_avail" multiple="multiple" style="border: 2px solid #a749ff;">
                     {{#each userdetails}}
-                    {{#ifCond usertype '!=' "admin"}}
+                    {{#ifCond username '!=' "admin"}}
                     <option value="{{username}}">{{username}} ({{usertype}})</option>
                     {{/ifCond}}
                     {{/each}}
