--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-xl-2 col-lg-2 col-md-6 col-4">
                 <div class="logo">
-                    <a href="/">
+                    <a href="/tailor/hometailor">
                         <img alt="" src="/img/logo/logo.png">
                     </a>
                 </div>
