--- a/views/rider/rorderhist.handlebars
+++ b/views/rider/rorderhist.handlebars
@@ -26,6 +26,7 @@
                                     <th>Pick Up Location</th>
                                     <th>Customer Name</th>
                                     <th>Delivery Price</th>
+                                     <th>Time Order Completed</th>
                                     <th>Order Status</th>
                                 </tr>
                             </thead>
@@ -41,6 +42,7 @@
                                     <td class="product-price-cart"><span class="amount">{{pickup_address}}</span></td>
                                     <td class="product-price-cart">{{cust_username}}</td>
                                     <td class="product-quantity">{{deliveryfee}}</td>
+                                    <td class="product-quantity">{{TimeOrdersCompleted}}</td>
                                     <td class="product-wishlist-cart">
                                         <a href="/rider/rideroutecheck/{{id}}">{{OrderStatus}}</a>
                                     </td>
